// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: script component->event function test add script event function test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <div
          className="wonder-script-function"
        >
          <div
            className="component-header"
          >
            <div
              className="header-title"
            >
              Script Function
            </div>
            <div
              className="header-close"
            >
              <img
                onClick={[Function]}
                src="./public/img/close.png"
              />
            </div>
          </div>
          <div
            className="inspector-item"
          >
            <div
              className="item-header"
              title="script event function asset in use"
            >
              Name
            </div>
            <div
              className="item-content"
            >
              <div
                className="inspector-select"
              >
                <div
                  className="select-name"
                  onClick={[Function]}
                >
                  New Script EventFunction
                </div>
                <div
                  className="select-img"
                  onClick={[Function]}
                >
                  <img
                    src="./public/img/select.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: script component->event function test add script event function test undo operate test undo one step step which from first to zero 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: script component->event function test change script event function test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <div
          className="wonder-script-function"
        >
          <div
            className="component-header"
          >
            <div
              className="header-title"
            >
              Script Function
            </div>
            <div
              className="header-close"
            >
              <img
                onClick={[Function]}
                src="./public/img/close.png"
              />
            </div>
          </div>
          <div
            className="inspector-item"
          >
            <div
              className="item-header"
              title="script event function asset in use"
            >
              Name
            </div>
            <div
              className="item-content"
            >
              <div
                className="inspector-select"
              >
                <div
                  className="select-name"
                  onClick={[Function]}
                >
                  New Script EventFunction 1
                </div>
                <div
                  className="select-img"
                  onClick={[Function]}
                >
                  <img
                    src="./public/img/select.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: script component->event function test change script event function test undo operate test undo one step step which from first to zero 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <div
          className="wonder-script-function"
        >
          <div
            className="component-header"
          >
            <div
              className="header-title"
            >
              Script Function
            </div>
            <div
              className="header-close"
            >
              <img
                onClick={[Function]}
                src="./public/img/close.png"
              />
            </div>
          </div>
          <div
            className="inspector-item"
          >
            <div
              className="item-header"
              title="script event function asset in use"
            >
              Name
            </div>
            <div
              className="item-content"
            >
              <div
                className="inspector-select"
              >
                <div
                  className="select-name"
                  onClick={[Function]}
                >
                  New Script EventFunction
                </div>
                <div
                  className="select-img"
                  onClick={[Function]}
                >
                  <img
                    src="./public/img/select.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: script component->event function test remove script event function test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: script component->event function test remove script event function test undo operate test undo one step step which from first to zero 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <div
          className="wonder-script-function"
        >
          <div
            className="component-header"
          >
            <div
              className="header-title"
            >
              Script Function
            </div>
            <div
              className="header-close"
            >
              <img
                onClick={[Function]}
                src="./public/img/close.png"
              />
            </div>
          </div>
          <div
            className="inspector-item"
          >
            <div
              className="item-header"
              title="script event function asset in use"
            >
              Name
            </div>
            <div
              className="item-content"
            >
              <div
                className="inspector-select"
              >
                <div
                  className="select-name"
                  onClick={[Function]}
                >
                  New Script EventFunction
                </div>
                <div
                  className="select-img"
                  onClick={[Function]}
                >
                  <img
                    src="./public/img/select.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;
